// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template only with content 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Before
		

	# MyContent

		# After
</div>"
`;

exports[`Template with invisible variable not set 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# MyContent

		# After<div class=\\"\\" style=\\"position: absolute; left: 0%; top: 94%; height: 6%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

		
		</div>
</div>"
`;

exports[`Template with variable not set 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# MyContent

		# After<div class=\\"\\" style=\\"position: absolute; left: 0%; top: 94%; height: 6%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

		<% footer %>
		</div>
</div>"
`;

exports[`Template with variable set 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# MyContent


	

		# After<div class=\\"\\" style=\\"position: absolute; left: 0%; top: 94%; height: 6%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

		<div class=\\"block\\">

# Hello
</div>


		</div>
</div>"
`;
